// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//protoc -I proto/ proto/watchlist.proto --go_out=plugins=grpc:proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package watchlist;
// The bookmark service definition.
service Watchlist {
  // add watchlist to db
  rpc AddWatchlist (WatchlistReq) returns (WatchlistRep) {}
  // get watchlist
  rpc GetWatchlist (WatchlistReq) returns (WatchlistRep) {}
  //delete
  rpc DeleteWatchlist (WatchlistReq) returns (WatchlistRep) {}
  //rpc NewWatchlist(WatchlistReq) returns (WatchlistRep) {}
}

// The request message containing the user's name.
message WatchlistReq {
  int32 user_id = 1;
  int32 movie_id = 2;
  int32 site_id = 3;
}

message WatchlistRep {
  string message = 1;
}


